# otaclient-api

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.github/: renovate.json5
.github/workflows/: claude-code-review.yml  claude.yml  release_api.yml  update_services_doc.yml
docs/: SERVICES.md
proto/: otaclient_v2.proto
script/: hatch_build.py
src/otaclient_pb2/v2/: __init__.py
