[build-system]
build-backend = "hatchling.build"
requires = [
  "grpcio-tools<1.77,>=1.57",
  "hatch-vcs",
  "hatchling>=1.20",
]

[project]
name = "otaclient-pb2"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
urls.Source = "https://github.com/tier4/otaclient-api"

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.hooks.vcs]
version-file = "src/otaclient_pb2/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "whl",
]

[tool.hatch.build.targets.wheel]
exclude = [
  "**/.gitignore",
  "**/*README.md",
  "whl",
]
only-include = [
  "src",
]
sources = [
  "src",
]

[tool.hatch.build.hooks.custom]
path = "script/hatch_build.py"
proto_builds = [
  { proto_file = "proto/otaclient_v2.proto", output_package = "otaclient_pb2/v2" },
]

[tool.black]
line-length = 88
target-version = [
  'py38',
]
extend-exclude = '''(
  ^.*(_pb2.pyi?|_pb2_grpc.pyi?)$
)'''

[tool.pyright]
exclude = [
  "**/__pycache__",
  "**/.venv",
]
ignore = [
  "**/*_pb2.py*",
  "**/*_pb2_grpc.py*",
]
pythonVersion = "3.8"
